# industrial_safety_intelligence_platform

./: .gitignore  README.md  data_generator.py  industrial-safety-intelligence-architecture.md  industrial_safety_intelligence_platform.html  pyproject.toml  requirements.txt  vercel.json
backend/: alerts.py  database.py  llm_reasoner.py  main.py  near_miss.py  report_generator.py  risk_engine.py
backend/data/: near_misses.json  oisd_excerpts.json
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  constants.js  risk-engine.js
frontend/js/components/: alert-feed.js  incident-modal.js  zone-detail.js  zone-grid.js
tests/: test_alerts.py  test_llm_reasoner.py  test_near_miss.py  test_report_generator.py  test_risk_engine.py
