[project]
name = "industrial-safety-intelligence-platform"
version = "2.0.0"
description = "SafetyIQ — Industrial Safety Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "fpdf2>=2.8.0",
    "pydantic>=2.12.0",
    "openai>=1.0.0",
    "httpx>=0.28.0",
]

[tool.vercel]
entrypoint = "api/index"
